Css: Readability fixes.

--- a/www/css/threadhack.css
+++ b/www/css/threadhack.css
@@ -10,6 +10,7 @@
         background: #F5F5F5 url(/images/Sky_Banner.png) left top no-repeat;
         height:100%;
         width:100%;
+        font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;
     }
     #main-container{
         width:95%;
@@ -18,6 +19,8 @@
         background: url(/images/Raven_Shape_White.png) left top no-repeat;
         min-width:780px;
         max-width:1000px;
+	position:relative;
+	margin:0 auto;
     }
     
     .footer{
@@ -26,7 +29,6 @@
         background-color: rgba(0, 0, 0, 0.7); /* css 3 only */
         color:#f5f5f5;
         width:100%;
-        height:3.5em;
         position:absolute;
         bottom:0;
         z-index:-1;
@@ -36,12 +38,14 @@
     }
     #top{
         width: 100%;
-        height:3em;
         min-height:3em;
         margin:0 auto;
         background-color: slateGray;
         background-color: rgba(0, 0, 0, 0.7); /* css 3 only */
         color:#f5f5f5;
+    }
+    .core{
+    	font-size:1.1em;
     }
     #core-wrapper{
         position:relative;
@@ -51,7 +55,7 @@
     #core-wrapper.long-page .core{
         margin-bottom:2em;
     }
-    #core-wrapper .description{
+    #core-wrapper .description, #core-wrapper #tumblr-widget{
         background-color: rgba(255, 255, 255, 0.8);
     }
     #core-wrapper .description .normal-text{
